# spl_rust_template

./: .gitignore  package-lock.json  package.json  readme.md
src/client/: lib.ts  main.ts  utils.ts
src/program-rust/: Cargo.toml
src/program-rust/src/: processor.rs
src/program-rust/tests/: functional.rs
