
[package]
name = "solana-bpf-smartcontract-template"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
byteorder = ""
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "=1.6.6"

[dev-dependencies]
solana-program-test = "=1.6.6"
solana-sdk = "=1.6.6"

[lib]
name = "smartcontract_template"
crate-type = ["cdylib", "lib"]
